@@ -72,7 +72,9 @@ New Features
   Additional Work:
   - SOLR-4032: Files larger than an internal buffer size fail to replicate.
     (Mark Miller, Markus Jelsma)
-
+  - SOLR-4033: Consistently use the solrconfig.xml lockType everywhere.
+    (Mark Miller, Markus Jelsma)
+    
 * SOLR-1972: Add extra statistics to RequestHandlers - 5 & 15-minute reqs/sec
   rolling averages; median, 75th, 95th, 99th, 99.9th percentile request times
   (Alan Woodward, Shawn Heisey, Adrien Grand)
